--- a/css/index.css
+++ b/css/index.css
@@ -1,3 +1,7 @@
+:root {
+    --overflow: 40px;
+}
+
 * {
     margin: 0;
     padding: 0;
@@ -10,18 +14,21 @@ main {
     left: 0;
     width: 100%;
     height: 100vh;
+
+    & .container {
+        position: absolute;
+        width: 90%;
+        display: grid;
+        grid-template-columns: 47.5% 47.5%;
+        gap: 5%;
+        top: 0;
+        left: 5%;
+        height: 2500px;
+        will-change: transform;
+    }
 }
 
-.container {
-    position: absolute;
-    display: grid;
-    grid-template-columns: 47.5% 47.5%;
-    gap: 5%;
-    top: 0;
-    left: 5%;
-    height: 2500px;
-    will-change: transform;
-}
+
 
 .item {
     position: relative;
@@ -36,11 +43,13 @@ main {
 }
 
 .img-wrap {
-    --overflow: 40px;
+    background-image: url(../assets/1.jpg);
+
     position: absolute;
     width: 100%;
-    height: calc(100% * (var(--overflow) * 2));
+    height: calc(100% + (var(--overflow) * 2));
     top: calc(-1 * var(--overflow));
+    left: 0;
     background-repeat: no-repeat;
     background-size: cover;
     will-change: transform;
